--- a/src/app/[locale]/components/footer/index.scss
+++ b/src/app/[locale]/components/footer/index.scss
@@ -99,6 +99,56 @@
 }
 }
 
+.blog-page{
+  .footer-container{
+    background-color: $old_lace;
+
+    .footer-design{
+      .logo{
+        .website-name{
+          color: #0C0C0C;
+        }
+      }
+      .menu{
+        border-right: 1px solid #0C0C0C;
+        .list-item{
+          .item{
+            color: #0C0C0C;
+          }
+        }
+      }
+      .info{
+        border-right: 1px solid #0C0C0C;
+        .text{
+          color: #0C0C0C;
+        }
+      }
+      .socials{
+        .social{
+          a{
+            svg{
+              fill: #0C0C0C;
+            }
+          }
+        }
+      }
+    }
+    .policies{
+      .list-item{
+        .item{
+          color: #0C0C0C;
+        }
+      }
+    }
+    .reserved{
+      color: #0C0C0C;
+      strong{
+        color: #0C0C0C;
+      }
+    }
+  }
+}
+
 
 @media (max-width:744px){
 	.footer-container{
@@ -153,7 +203,6 @@
         text-align: left;
       }
     }
-
   }
   .policies{
     width: 80%;
@@ -177,6 +226,17 @@
       font-size: 16px;
       font-weight: 600;
     }
+}
+
+
+.blog-page{
+  .footer-container{
+    .footer-design{
+      .info{
+        border: none;
+      }
+    }
+  }
 }
 }
 
