--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -17,6 +17,9 @@ body{
   overflow-x:hidden;
   background-color: #0C0C0C;
 }
+.blog-page{
+  background-color: $old_lace;
+}
 
 
 @media (max-width:744px){
