--- a/src/app/[locale]/components/navbar/index.scss
+++ b/src/app/[locale]/components/navbar/index.scss
@@ -2,6 +2,11 @@
 
 .blog-page{
   .navbar{
+    .menu-action{
+      svg{
+        stroke: #0C0C0C;
+      }
+    }
     .navbar-container{
       .navbar-list{
         .list-item{
