--- a/src/app/[locale]/components/navbar/index.scss
+++ b/src/app/[locale]/components/navbar/index.scss
@@ -149,21 +149,26 @@
       .mobile-navbar-box{
         width: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin-top: 1rem;
         .list-item{
-          width: 100%;
+          width: 40%;
           display: flex;
           align-items: center;
-          justify-content: right;
+          justify-content: center;
+          margin-top: 1rem;
           padding: .5rem 0rem;
-          margin-right: 2rem;
-          z-index: 200;
+          z-index: 100;
           .item{
             border-bottom: 1px solid $black;
+            font-size: 16px;
+            font-weight: 500;
           }
           .language-switcher-design{
-            z-index: 200;
+            z-index: 100;
           }
         }
       }
