--- a/src/app/[locale]/components/qr-code/index.scss
+++ b/src/app/[locale]/components/qr-code/index.scss
@@ -65,6 +65,9 @@
 }
 @media (max-width:390px){
     .qr-code-design{
+        .title{
+            margin-bottom: 0rem;
+        }
         .qr-code-container{
             .text-container{
                 .container-title{
