--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -53,6 +53,9 @@
             &.img-four {
               background: url("../../../../static/media/saporedinatura.jpg") no-repeat 50% / cover;
             }
+            &.img-five {
+              background: url("../../../../static/media/drink.jpg") no-repeat 50% / cover;
+            }
             
             
             &:hover .content {
