Feat: add new website

--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -56,6 +56,9 @@
             &.img-five {
               background: url("../../../../static/media/drink.jpg") no-repeat 50% / cover;
             }
+            &.img-six {
+              background: url("../../../../static/media/thelab.png") no-repeat 50% / cover;
+            }
             
             
             &:hover .content {
