Fix: change imgs projects

--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -57,7 +57,7 @@
               background: url("../../../../static/media/drink.jpg") no-repeat 50% / cover;
             }
             &.img-six {
-              background: url("../../../../static/media/thelab.png") no-repeat 50% / cover;
+              background: url("../../../../static/media/thelab.jpg") no-repeat 50% / cover;
             }
             
             
