--- a/src/app/[locale]/components/qr-code/index.scss
+++ b/src/app/[locale]/components/qr-code/index.scss
@@ -16,6 +16,10 @@
         width: 100%;
         display: flex;
         align-items: center;
+        .image{
+            width: 55%;
+            height: 55%;
+        }
         .text-container{
             width: 50%;
             .title{
@@ -47,6 +51,10 @@
         }
         .qr-code-container{
             flex-direction: column;
+            .image{
+                width: 100%;
+                height: 100%;
+            }
             .text-container{
                 margin-top: 2rem;
                 width: 100%;
