--- a/src/app/[locale]/components/whatsapp/index.scss
+++ b/src/app/[locale]/components/whatsapp/index.scss
@@ -2,7 +2,8 @@
 .whatsapp{
     position: fixed;
     bottom: 4.5rem;
-    left: 1.5rem;
+    left: 1rem;
+    z-index: 100;
     width: max-content;
     cursor: pointer;
     display: flex;
@@ -22,5 +23,13 @@
         text-transform: uppercase;
         margin-right: 1rem;
         text-align: center;
+    }
+}
+
+@media (max-width:390px){
+    .whatsapp{
+        .whats-text{
+            font-size: 18px;
+        }
     }
 }
