Feat: Blog page

--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -10,6 +10,16 @@ p {
   .margin-top-bottom-4 {
     margin: 4rem 0rem;
   }
+  .margin-top-bottom-2{
+    margin: 2rem 0rem;
+  }
+
+  .margin-top-2{
+    margin-top: 2rem;
+  }
+  .margin-bottom-2{
+    margin-bottom: 2rem;
+  }
 
   .img {
     width: 100%;
