Feat: Article ita

--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -20,6 +20,21 @@ p {
   .margin-bottom-2{
     margin-bottom: 2rem;
   }
+  .margin-top-1{
+    margin-top: 1rem;
+  }
+  .margin-bottom-1{
+    margin-bottom: 1rem;
+  }
+  .bold{
+    font-weight: bold;
+  }
+  .link{
+    background-color:#BB4C34;
+  }
+  .center-text{
+    text-align: center;
+  }
 
   .img {
     width: 100%;
