--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -13,7 +13,14 @@ p {
   .margin-top-bottom-2{
     margin: 2rem 0rem;
   }
+  .margin-top-bottom-1{
+    margin: 1rem 0rem;
+  }
+  
 
+  .margin-top-4{
+    margin-top: 4rem;
+  }
   .margin-top-2{
     margin-top: 2rem;
   }
