--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -34,6 +34,10 @@ p {
   .margin-bottom-1{
     margin-bottom: 1rem;
   }
+  .container-img{
+    width: 100%;
+    height: 100%;
+  }
   .bold{
     font-weight: bold;
     &:hover{
