Feat: new website add to projects

--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -59,6 +59,9 @@
             &.img-six {
               background: url("../../../../static/media/thelab.jpg") no-repeat 50% / cover;
             }
+            &.img-seven {
+              background: url("../../../../static/media/paucek.png") no-repeat 50% / cover;
+            }
             
             
             &:hover .content {
