Feat: new project add

--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -62,6 +62,9 @@
             &.img-seven {
               background: url("../../../../static/media/paucek.png") no-repeat 50% / cover;
             }
+            &.img-eight {
+              background: url("../../../../static/media/fornoefiamma.jpg") no-repeat 50% / cover;
+            }
             
             
             &:hover .content {
