--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -65,6 +65,9 @@
             &.img-eight {
               background: url("../../../../static/media/fornoefiamma.jpg") no-repeat 50% / cover;
             }
+            &.img-nine {
+              background: url("../../../../static/media/sovy.png") no-repeat 50% / cover;
+            }
             
             
             &:hover .content {
